@@ -28,6 +28,9 @@ Bugfix
      In the context of SSL, this resulted in handshake failure. Reported by
      daniel in the Mbed TLS forum. #1351
    * Fix Windows x64 builds with the included mbedTLS.sln file. #1347
+   * Improve the robustness of mbedtls_rsa_rsassa_pkcs1_v15_verify().
+     This silences a false positive from Clang Static Analyzer reported by
+     aaronmdjones. #1002
 
 = mbed TLS 2.1.10 branch released 2018-02-03
 
